# tkom_21z-jezyk_z_czasem

./: CMakeLists.txt  main.cpp
headers/: CharAndPosition.h  CodeSource.h
libs/doctest/: CMakeLists.txt
libs/doctest/include/: doctest.h
sources/: CodeSource.cpp  main.cpp
src/: CMakeLists.txt  CodeSource.cpp  CodeSource.h  charAndPosition.h  codeSource.cpp  codeSource.h  lexer.cpp  lexer.h  main.cpp  timePeriod.h  token.h
src/codeSource/: CMakeLists.txt  charAndPosition.h  codeSource.cpp  codeSource.h  position.h
src/interpreter/: CMakeLists.txt  context.cpp  context.h  funcallcontext.cpp  funcallcontext.h  interpreter.cpp  interpreter.h  scope.cpp  scope.h
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.h  timeMoment.h  timePeriod.h  token.h
src/parser/: CMakeLists.txt  assignOperatorNode.h  astNode.h  binaryOperators.h  binaryOperatorsNode.h  blockNode.h  clockNode.h  command.cpp  command.h  conditionNode.h  dateNode.h  doubleNode.h  elifNode.h  elifstat.cpp  elifstat.h  elseNode.h  errorNode.h  expression.h  funcArgsNode.h  funcCallNode.h  funcDefNode.h  funccall.cpp  funccall.h  funcdef.cpp  funcdef.h  identifierNode.h  ifNode.h  ifstatement.cpp  ifstatement.h  instruction.cpp  instruction.h  intNode.h  literal.cpp  literal.h  operatoroperation.cpp  operatoroperation.h  parser.cpp  parser.h  phrase.h  programNode.h  (+19 more)
tests/: CMakeLists.txt  TestCharAndPosition.cpp  doctest.cpp  testCharAndPosition.cpp  testCodeSource.cpp  testInterpreter.cpp  testLexer.cpp  testParser.cpp
